<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/title_hint"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:hint="@string/note_hint"
        />

    <CheckBox
        android:id="@+id/checkBox_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toBottomOf="@id/edit_description"
        app:layout_constraintEnd_toEndOf="@id/edit_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/checkBox_idea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox_idea"
        app:layout_constraintBottom_toBottomOf="@id/checkBox_idea"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/idea_text"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toBottomOf="@id/edit_description"
        app:layout_constraintEnd_toEndOf="@id/edit_description"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/checkBox_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox_todo"
        app:layout_constraintBottom_toBottomOf="@id/checkBox_todo"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/todo_text"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toBottomOf="@id/checkBox_todo"
        app:layout_constraintEnd_toEndOf="@id/edit_description"
        app:layout_constraintHorizontal_bias="0"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/checkBox_important"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox_important"
        app:layout_constraintBottom_toBottomOf="@id/checkBox_important"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/important_text"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_idea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.2"
        android:text="@string/cancel_button"
        android:layout_marginTop="150dp"
        />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_idea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"
        android:text="@string/action_add"
        android:layout_marginTop="150dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>