<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/todoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/todo_text"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.2"/>

    <TextView
        android:id="@+id/importantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/important_text"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
        android:id="@+id/ideaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/idea_text"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.8"/>
    <TextView
        android:id="@+id/titleTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextViewID"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"/>


    <TextView
        android:id="@+id/descriptionTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextViewID"
        app:layout_constraintBottom_toTopOf="@+id/okButtonID"
        android:textSize="18sp"
        android:layout_marginBottom="70dp"/>


    <Button
        android:id="@+id/okButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/descriptionTextViewID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>